fix: footer too big, added transparency

--- a/Components/App/App.module.css
+++ b/Components/App/App.module.css
@@ -178,15 +178,15 @@
 .cprght-wrapper {
   position: absolute;
   bottom: 0;
-  height: 60px;
+  height: 40px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 13px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: rgb(170, 170, 170);
-  background-color: black;
+  color: rgb(223, 223, 223);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 
